manifest/wayf/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wayf-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: wayf
  type: ClusterIP
