manifest/wayf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    cert-manager.io/private-key-algorithm: ECDSA
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.org/client-max-body-size: 100m
  name: ds-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ds.ifirexman.edu
    http:
      paths:
      - backend:
          service:
            name: wayf-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ds.ifirexman.edu
    secretName: ds-tls-cert
